# Orchestrator

./: .gitignore  .gitmodules  CMakeLists.txt  conandata.yml  conanfile.py
resources/configs/: camera_indices.yml  general_config.yml  known_box_codes.yml  layout_db.yml  scripts.yml
resources/scripts/: kiosk_events.py  test_script.py
src/: Orchestrator.cpp  Orchestrator.hpp  main.cpp
src/code-detection/: CodeDetector.cpp  CodeDetector.hpp
src/events/: DebugEventUI.cpp  DebugEventUI.hpp  Event.hpp  GlobalEventTable.cpp  GlobalEventTable.hpp  PythonEventRegistrar.cpp  PythonEventRegistrar.hpp  PythonEvents.cpp  PythonEvents.hpp
src/facial-recognition/: FaceRecognitionDebug.cpp  FaceRecognitionDebug.hpp  FacialRecognition.cpp  FacialRecognition.hpp  MedicationCheckoutEvent.hpp  PersonEntry.hpp
src/graphics/: GraphicsInitialize.cpp  GraphicsInitialize.hpp  View.cpp  View.hpp
src/io/: CameraInput.cpp  CameraInput.hpp  FileIo.cpp  FileIo.hpp  KioskNetworkServer.cpp  KioskNetworkServer.hpp
src/models/:  Box.hpp  Box.hpp  Code.hpp  KnownBox.cpp  KnownBox.hpp  Shelf.hpp
src/pills/: Pill.hpp  PillRecognition.cpp  PillRecognition.hpp
